--- a/src/assets/scss/_vars.scss
+++ b/src/assets/scss/_vars.scss
@@ -1,4 +1,7 @@
 $default-html-font-size: 16px;
 
+$white-color: #ffffff;
+$transparent-white-color: rgba(255, 255, 255, 0.2);
 $black-color: #000000;
-$white-color: #FFFFFF;
+$orange-color: #ff9900;
+$gray-color: #9a9a9a;
