--- a/src/assets/scss/_footer.scss
+++ b/src/assets/scss/_footer.scss
@@ -1,7 +1,8 @@
 .footer {
   position: fixed;
   bottom: 0;
-  width: 320px;
+  min-width: 320px;
+  width: 100vw;
   height: 45px;
 
   &__styled {
