--- a/src/assets/scss/styles.scss
+++ b/src/assets/scss/styles.scss
@@ -2,7 +2,7 @@
 @import "../lib/scss/_rem";
 @import "./vars";
 @import "./fonts/fonts";
-@import "./mixins/buttons";
+@import "./mixins/index";
 
 // Edit defaults
 @import "defaults";
