completing chats-list page

--- a/src/assets/scss/_main-content.scss
+++ b/src/assets/scss/_main-content.scss
@@ -6,3 +6,4 @@
 @import "./main-content/page-general";
 @import "./main-content/chat";
 @import "./main-content/peoples";
+@import "./main-content/chats-list";
