--- a/src/assets/scss/mixins/_inputs.scss
+++ b/src/assets/scss/mixins/_inputs.scss
@@ -2,6 +2,7 @@
   width: rem(270px);
   height: rem(33px);
   border: 1px solid $black-color;
+  padding: rem(8px 44px 9px 32px);
   background: $white-color;
   @include regular-14-black;
   text-align: center;
