--- a/src/assets/scss/_media.scss
+++ b/src/assets/scss/_media.scss
@@ -1,16 +1,16 @@
 // Medium devices (tablets, 768px and up)
-//@media (min-width: 768px) {
-//  html {
-//    font-size: 24px;
-//  }
-//}
+@media (min-width: 768px) {
+  html {
+    font-size: 19px;
+  }
+}
 
 // Large devices (desktops, 992px and up)
-//@media (min-width: 992px) {
-//  html {
-//    font-size: 36px;
-//  }
-//}
+@media (min-width: 992px) {
+  html {
+    font-size: 22px;
+  }
+}
 
 // Extra large devices (large desktops, 1200px and up)
 @media (min-width: 1200px) {
