--- a/src/assets/scss/_header.scss
+++ b/src/assets/scss/_header.scss
@@ -17,6 +17,11 @@
     margin: rem(5px 8px);
   }
 
+  &__avatar {
+    width: rem(35px);
+    height: rem(35px);
+  }
+
   &__username-wrapper {
     white-space: nowrap;
   }
