--- a/src/assets/scss/_header.scss
+++ b/src/assets/scss/_header.scss
@@ -1,8 +1,7 @@
 .header {
   position: fixed;
-  min-width: rem(320px);
+  min-width: 320px;
   width: 100vw;
-  //min-height: rem(45px);
   height: rem(45px);
 
   &__styled {
